# cot_fm

./: environment.yml  pyproject.toml  readme.md  requirements.txt  yml_to_txt.py
cotfm/: cot.py  cot_flow_matching.py  trainer.py  util.py
cotfm/darcy_flow/: fm_eval.py  fm_mini_cot_training.py  fm_no_ot_training.py  gan_training.py
cotfm/darcy_flow/src/: fm.py  gan.py  si.py
cotfm/darcy_flow/src/util/: dataloaders.py  gaussian_process.py  ot.py
data/: X_observed.npy  build_dataset_darcy.py  darcySolver.py  dataloader.pt  gp_dataset.pt  lotka_volterra.py  params.txt  synthetic.py  test_loader_0.pt  test_loader_1.pt  test_loader_2.pt  test_loader_3.pt  test_loader_4.pt  true_permeability_fields.npy
mcmc/: mcmc_lv.py  pCN_sampler_darcy.py  run_MCMC_darcy.py
models/: fourier_neural_operator.py  gan.py  mlp.py
notes/: 20240909.ipynb
utils/: util.py
